--- a/assets/styl/native.styl
+++ b/assets/styl/native.styl
@@ -1,2 +1,14 @@
+body
+  background-color #f1f1f1
+
 body, h1, h2, h3, h4, h5, h6, p
-	font-family: 'Arial', sans-serif
+  color #999
+  font-family: 'Arial', sans-serif
+  text-align center
+  text-shadow 0 1px 1px #fff
+  
+h1
+  font-size 48px
+
+h1, h2, h3
+  letter-spacing -3px
