--- a/src/styles/native.styl
+++ b/src/styles/native.styl
@@ -1,7 +1,70 @@
-body
-  background-color: #f1f1f1
+@require '_variables'
+@require '_mixins'
 
-body, h1, h2, h3, h4, h5, h6, p
-  color #999
-  font-family 'Helvetica', 'Arial', sans-serif
+html,
+body
+  margin 0
+  padding 0
+  background-color $color-grey-light
+  color $color-grey-dark
+  font-family $font-family-primary
+  line-height 1.2
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6
+    color $color-primary
+
+p
+  margin 0
+  & + p
+    margin-top 10px
+
+a
+  display inline-block
+  color $color-blue
+  text-decoration none
+  border-bottom-width 1px
+  border-bottom-style solid
+  border-bottom-color transparent
+  transition(all, 300ms)
+  &:hover,
+  &:focus,
+  &:active
+    color $color-blue
+    border-bottom-color $color-blue
+
+input,
+textarea,
+button
+  position relative
+  padding 8px
+  color $color-grey-dark
+  background-color transparent
+  font-size $font-size-sm
+  border 2px solid $color-grey
+  border-radius(6px)
+  box-sizing(border-box)
+  webkit-appearance(none)
+  &:focus,
+  &:active
+    outline 0
+
+input
+  &[readonly]
+    background-color $color-grey-light
+
+button
+  min-width 38px
   text-align center
+  cursor pointer
+  transition(all, 300ms)
+  &:hover,
+  &:focus,
+  &:active
+    outline 0
+  &:hover,
+  &:active
+    background-color $color-grey
