--- a/src/scripts/components/author-picto-card/author-picto-card-template.html
+++ b/src/scripts/components/author-picto-card/author-picto-card-template.html
@@ -1,5 +1,5 @@
 <div class="author-picto-card">
-  <ng-picto-card
+  <nr-picto-card
     data-title="Rafael Camargo"
     data-image="avatar.jpeg">
     <p>
@@ -14,7 +14,7 @@
     <p>
       If you want to get in touch with me, drop me a message or reach me on social networks.
     </p>
-    <ng-divider></ng-divider>
-    <ng-author-contact-form></ng-author-contact-form>
-  </ng-picto-card>
+    <nr-divider></nr-divider>
+    <nr-author-contact-form></nr-author-contact-form>
+  </nr-picto-card>
 </div>
