--- a/src/scripts/components/author-social-networks/author-social-networks-template.html
+++ b/src/scripts/components/author-social-networks/author-social-networks-template.html
@@ -1,5 +1,5 @@
 <div class="author-social-networks">
-  <ng-social-networks
+  <nr-social-networks
     data-networks="$ctrl.networks">
-  </ng-social-networks>
+  </nr-social-networks>
 </div>
