--- a/src/scripts/components/card/card-template.html
+++ b/src/scripts/components/card/card-template.html
@@ -1,10 +1,10 @@
 <div class="card">
   <div class="card-title"
     ng-if="$ctrl.title">
-    <ng-icon
+    <nr-icon
       data-icon="{{ $ctrl.icon }}"
       ng-if="$ctrl.icon">
-    </ng-icon>
+    </nr-icon>
     {{ $ctrl.title }}
   </div>
   <div class="card-content">
