--- a/src/scripts/components/copiable-value-input/copiable-value-input-template.html
+++ b/src/scripts/components/copiable-value-input/copiable-value-input-template.html
@@ -4,6 +4,6 @@
     type="button"
     data-clipboard-text="{{ $ctrl.value }}"
     data-clipboard-trigger>
-    <ng-icon data-icon="ion-clipboard"></ng-icon>
+    <nr-icon data-icon="ion-clipboard"></nr-icon>
   </button>
 </div>
