--- a/src/scripts/components/external-link/external-link-template.html
+++ b/src/scripts/components/external-link/external-link-template.html
@@ -1,7 +1,7 @@
 <div class="external-link" ng-click="$ctrl.openUrl()">
-  <ng-icon
+  <nr-icon
     data-icon="{{ $ctrl.icon }}">
-  </ng-icon>
+  </nr-icon>
   <span
     ng-if="$ctrl.text"
     class="external-link-text"
