--- a/src/scripts/components/picto-card/picto-card-template.html
+++ b/src/scripts/components/picto-card/picto-card-template.html
@@ -1,16 +1,16 @@
 <div class="picto-card-container">
   <div class="picto-card">
-    <ng-card
+    <nr-card
       data-title="{{ $ctrl.title }}">
       <div class="picto-card-bubble-container">
         <div class="picto-card-bubble">
-          <ng-icon
+          <nr-icon
             ng-if="$ctrl.icon"
             data-icon="{{ $ctrl.icon }}">
-          </ng-icon>
+          </nr-icon>
         </div>
       </div>
       <ng-transclude></ng-transclude>
-    </ng-card>
+    </nr-card>
   </div>
 </div>
