--- a/src/scripts/components/viewport/viewport-template.html
+++ b/src/scripts/components/viewport/viewport-template.html
@@ -1,5 +1,5 @@
 <div class="viewport">
-  <ng-topbar></ng-topbar>
+  <nr-topbar></nr-topbar>
   <div class="viewport-content">
     <ng-transclude></ng-transclude>
   </div>
