--- a/src/scripts/components/welcome-picto-card/welcome-picto-card-template.html
+++ b/src/scripts/components/welcome-picto-card/welcome-picto-card-template.html
@@ -1,15 +1,15 @@
 <div class="welcome-picto-card">
-  <ng-picto-card
+  <nr-picto-card
     data-title="Welcome"
     data-icon="ion-social-angular">
     <p>
       Angular Rise is a starter kit for AngularJS applications structured on a
       component based architecture. Clone it and start a new project with ease:
     </p>
-    <ng-copiable-value-input
+    <nr-copiable-value-input
       data-value="git clone git@github.com:rafaelcamargo/ng-rise.git">
-    </ng-copiable-value-input>
-    <ng-divider></ng-divider>
-    <ng-credits></ng-credits>
-  </ng-picto-card>
+    </nr-copiable-value-input>
+    <nr-divider></nr-divider>
+    <nr-credits></nr-credits>
+  </nr-picto-card>
 </div>
