--- a/src/styles/form.styl
+++ b/src/styles/form.styl
@@ -1,14 +1,14 @@
 @require '_variables'
 @require '_mixins'
 
-.request-form-container
+.form-container
   .alert
     margin-bottom 20px
 
-.request-form
+.form
   .loader
     display none
-  &.request-form-loading
+  &.form-loading
     position relative
     &:before
       position absolute
