--- a/src/styles/row.styl
+++ b/src/styles/row.styl
@@ -1,9 +1,9 @@
 @require '_mixins'
 @require 'row-item'
 
-ng-row
+nr-row
   display block
-  & + ng-row
+  & + nr-row
     margin-top 15px
 .row
   margin 0 $row-item-padding * -1
