--- a/src/scripts/components/topbar/topbar-template.html
+++ b/src/scripts/components/topbar/topbar-template.html
@@ -1,6 +1,6 @@
 <div class="topbar">
   <div class="topbar-content">
-    <ng-logo></ng-logo>
-    <ng-app-menu></ng-app-menu>
+    <nr-logo></nr-logo>
+    <nr-app-menu></nr-app-menu>
   </div>
 </div>
