--- a/src/scripts/views/author/author-template.html
+++ b/src/scripts/views/author/author-template.html
@@ -1,3 +1,3 @@
-<ng-viewport>
-  <ng-author-picto-card></ng-author-picto-card>
-</ng-viewport>
+<nr-viewport>
+  <nr-author-picto-card></nr-author-picto-card>
+</nr-viewport>
