--- a/src/scripts/views/welcome/welcome-template.html
+++ b/src/scripts/views/welcome/welcome-template.html
@@ -1,3 +1,3 @@
-<ng-viewport>
-  <ng-welcome-picto-card></ng-welcome-picto-card>
-</ng-viewport>
+<nr-viewport>
+  <nr-welcome-picto-card></nr-welcome-picto-card>
+</nr-viewport>
