--- a/src/styles/button.styl
+++ b/src/styles/button.styl
@@ -13,3 +13,16 @@ button
     font-size $font-size-xxs
     line-height 16px
     padding 0 5px
+  &.button-circled
+      padding 0
+      min-width 0
+      width 30px
+      height 30px
+      background-color transparent
+      text-align center
+      border-radius 50%
+      .icon
+        position absolute
+        top 50%
+        left 50%
+        transform('translate(-50%,-50%)')
