Adding TUM to the author picto card

--- a/src/scripts/components/author-picto-card/author-picto-card-template.html
+++ b/src/scripts/components/author-picto-card/author-picto-card-template.html
@@ -12,6 +12,9 @@
       and <a href="https://www.npmjs.com/package/gcookie" target="_blank">Glorious Cookie</a>.
     </p>
     <p>
+      Writer of <a href="https://www.theunseriousmanifest.org/?utm_source=angular-rise&utm_medium=author-picto-card" target="_blank">The Unserious Manifest</a>.
+    </p>
+    <p>
       If you want to get in touch with me, drop me a message or reach me on social networks.
     </p>
     <nr-divider></nr-divider>
