--- a/src/scripts/components/credits/credits-template.html
+++ b/src/scripts/components/credits/credits-template.html
@@ -1,6 +1,6 @@
 <div class="credits">
   <p>
-    Angular Rise is a project created and mantained by
+    Angular Rise is a project created and maintained by
     <a href="https://www.rafaelcamargo.com/?utm_source=angular-rise&utm_medium=credits" target="_blank">Rafael Camargo</a>.
     Check it out on <a href="https://github.com/rafaelcamargo/ng-rise" target="_blank">Github</a>.
   </p>
