--- a/src/styles/topbar.styl
+++ b/src/styles/topbar.styl
@@ -7,6 +7,7 @@ $topbar-border-color = alpha($color-grey, .5)
 .topbar
   background-color $color-lightest
   border-bottom 1px solid $topbar-border-color
+  backdrop-filter('blur(10px)')
 
 .topbar-content
   position relative
