Adding grey semi colors

--- a/src/styles/_variables.styl
+++ b/src/styles/_variables.styl
@@ -1,6 +1,8 @@
 // COLORS
 $color-grey-light = #F1F1F1
+$color-grey-semi-light = #E9EAEB
 $color-grey = #C9D3DD
+$color-grey-semi-dark = #B1B4B7
 $color-grey-dark = #737C84
 
 $color-blue-light = #B8DCFF
