Improvements on form component

--- a/src/scripts/components/author-contact-form/author-contact-form-template.html
+++ b/src/scripts/components/author-contact-form/author-contact-form-template.html
@@ -3,10 +3,7 @@
     data-name="authorContactForm"
     data-submit="$ctrl.submit"
     data-submit-success="$ctrl.onSubmitSuccess"
-    data-submit-error="$ctrl.onSubmitError"
-    data-alert="$ctrl.alert"
-    data-bind-ctrl="true"
-    data-ctrl="$ctrl.formCtrl">
+    data-submit-success-message="Message successfully sent. Thank you!">
     <nr-row>
       <nr-row-item
         data-size="12"
