Minor improvement on feedback form label

--- a/src/scripts/components/feedback-form/feedback-form-template.html
+++ b/src/scripts/components/feedback-form/feedback-form-template.html
@@ -7,7 +7,7 @@
     <nr-row>
       <nr-row-item
         data-size="12"
-        data-label="How long have you worked as software developer?">
+        data-label="How many years have you worked as a software developer?">
         <input type="number" ng-model="$ctrl.experience" required/>
       </nr-row-item>
     </nr-row>
