Minor fix on welcome picto card title

--- a/src/scripts/components/welcome-picto-card/welcome-picto-card-template.html
+++ b/src/scripts/components/welcome-picto-card/welcome-picto-card-template.html
@@ -1,6 +1,6 @@
 <div class="welcome-picto-card">
   <nr-picto-card
-    data-title="Welcome 2"
+    data-title="Welcome"
     data-icon="ion-social-angular">
     <p>
       Angular Rise is a starter kit for AngularJS applications structured on a
